--- a/code.html
+++ b/code.html
@@ -56,7 +56,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/AnshulWadhwaDev/OddsAndEvens">Git Repo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="#">About</a>
@@ -209,7 +209,7 @@ function displayNumbers(numbers) {
             <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                 <div class="row">
                     <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                    <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                    <div class="col social"><a href="https://github.com/AnshulWadhwaDev" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                 </div>
             </div> 
         </div>
